# QSciTE

./: .gitignore  CMakeLists.txt  CompilerDefaultFlags.cmake  QSciTE.cbp  README.md  qrc_resources.cxx  ui_QSciTE.h
doc/: Linux HowTo.txt
resources/: Info.plist  QSciTE.ui  about.txt  resources.qrc  resources.qrc.depends
src/: Buffer.cpp  Buffer.hpp  BufferManager.cpp  BufferManager.hpp  Editor.cpp  Editor.hpp  EditorManager.cpp  EditorManager.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp  moc_MainWindow.cxx
tools/cmake/: FindScintilla.cmake
